--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "httpx==0.27.2",
     "idna==3.8",
     "iniconfig==2.0.0",
+    "isort>=5.13.2",
     "jinja2==3.1.4",
     "markdown-it-py==3.0.0",
     "markupsafe==2.1.5",
@@ -28,6 +29,7 @@ dependencies = [
     "motor>=3.5.1",
     "packaging==24.1",
     "pluggy==1.5.0",
+    "pre-commit>=3.8.0",
     "pydantic-core==2.20.1",
     "pydantic-settings>=2.4.0",
     "pydantic==2.8.2",
@@ -38,6 +40,7 @@ dependencies = [
     "python-multipart==0.0.9",
     "pyyaml==6.0.2",
     "rich==13.8.0",
+    "ruff>=0.6.3",
     "shellingham==1.5.4",
     "sniffio==1.3.1",
     "starlette==0.38.4",
