--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "packaging==24.1",
     "pluggy==1.5.0",
     "pydantic-core==2.20.1",
+    "pydantic-settings>=2.4.0",
     "pydantic==2.8.2",
     "pygments==2.18.0",
     "pytest==8.3.2",
