add MongoDB connection to project for database integration

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "markdown-it-py==3.0.0",
     "markupsafe==2.1.5",
     "mdurl==0.1.2",
+    "motor>=3.5.1",
     "packaging==24.1",
     "pluggy==1.5.0",
     "pydantic-core==2.20.1",
