--- a/compose.test.yml
+++ b/compose.test.yml
@@ -7,11 +7,12 @@ services:
       target: test
     ports:
       - 8000:8000
-    depends_on:
-      - db
+    command: pytest -x
+  #   depends_on:
+  #     - db
 
-  db:
-    image: mongo
-    command: mongod --quiet --logpath /dev/null
-    ports:
-      - "27017:27017"
+  # db:
+  #   image: mongo
+  #   command: mongod --quiet --logpath /dev/null
+  #   ports:
+  #     - "27017:27017"
