--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,8 @@ dnspython==2.6.1
     #   pymongo
 email-validator==2.2.0
     # via quiz-app-backend (pyproject.toml)
+environs==11.0.0
+    # via quiz-app-backend (pyproject.toml)
 fastapi==0.112.2
     # via quiz-app-backend (pyproject.toml)
 fastapi-cli==0.0.5
@@ -72,6 +74,8 @@ markupsafe==2.1.5
     # via
     #   quiz-app-backend (pyproject.toml)
     #   jinja2
+marshmallow==3.22.0
+    # via environs
 mdurl==0.1.2
     # via
     #   quiz-app-backend (pyproject.toml)
@@ -81,6 +85,7 @@ motor==3.5.1
 packaging==24.1
     # via
     #   quiz-app-backend (pyproject.toml)
+    #   marshmallow
     #   pytest
 pluggy==1.5.0
     # via
@@ -108,6 +113,7 @@ pytest==8.3.2
 python-dotenv==1.0.1
     # via
     #   quiz-app-backend (pyproject.toml)
+    #   environs
     #   pydantic-settings
     #   uvicorn
 python-multipart==0.0.9
