chore(backend): add test database and delete dummy tests

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,84 +5,45 @@ description = ""
 readme = ""
 requires-python = ">=3.12.5"
 dependencies = [
-
     "annotated-types==0.7.0",
-
     "anyio==4.4.0",
-
     "certifi==2024.8.30",
-
     "click==8.1.7",
-
     "colorama==0.4.6",
-
     "dnspython==2.6.1",
-
     "email-validator==2.2.0",
-
     "environs>=11.0.0",
-
     "fastapi-cli==0.0.5",
-
     "fastapi==0.112.2",
-
     "h11==0.14.0",
-
     "httpcore==1.0.5",
-
     "httptools==0.6.1",
-
     "httpx==0.27.2",
-
     "idna==3.8",
-
     "iniconfig==2.0.0",
-
     "jinja2==3.1.4",
-
     "markdown-it-py==3.0.0",
-
     "markupsafe==2.1.5",
-
     "mdurl==0.1.2",
-
     "motor>=3.5.1",
-
     "packaging==24.1",
-
     "pluggy==1.5.0",
-
     "pydantic-core==2.20.1",
-
     "pydantic-settings>=2.4.0",
-
     "pydantic==2.8.2",
-
     "pygments==2.18.0",
-
+    "pytest-asyncio>=0.24.0",
     "pytest==8.3.2",
-
     "python-dotenv==1.0.1",
-
     "python-multipart==0.0.9",
-
     "pyyaml==6.0.2",
-
     "rich==13.8.0",
-
     "shellingham==1.5.4",
-
     "sniffio==1.3.1",
-
     "starlette==0.38.4",
-
     "typer==0.12.5",
-
     "typing-extensions==4.12.2",
-
     "uvicorn==0.30.6",
-
     "watchfiles==0.24.0",
-
     "websockets==13.0.1",
 ]
