--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"dev-docker": "vite dev --config vite.config.docker.js",
-		"build": "vite build",
+		"build": "ORIGIN=http://localhost:3000 vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
@@ -28,5 +29,9 @@
 		"tailwindcss": "^3.4.10",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"express": "^4.21.0",
+		"express-http-proxy": "^2.1.1"
+	}
 }
