refactor: include mongodb in workflow

--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -2,9 +2,14 @@ name: Style & Test Checks
 on:
   pull_request:
     branches: [main, dev]
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
+
+env:
+  MONGO_TEST_URI: "mongodb://localhost:27017/"
+
 jobs:
   # src: https://akhilaariyachandra.com/blog/prettier-in-github-actions
   frontend-checks:
@@ -29,5 +34,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: MongoDB in GitHub Actions
+        uses: supercharge/mongodb-github-action@1.11.0      
       - name: Run backend checks
         run: make test
