refactor: add mongo_uri env to workflow file

--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -8,6 +8,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  MONGO_URI: "mongodb://localhost:27017/"
   MONGO_TEST_URI: "mongodb://localhost:27017/"
 
 jobs:
